Add privileged check to launcher Add logging to launcher